--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,3 +9,4 @@
 @import "./01_base/04_darkMode";
 @import "./01_base/04_responsive";
 @import "./01_base/05_tablette.scss";
+@import "./01_base/06_mobile.scss";
