--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -25,7 +25,8 @@
 }
 body {
     line-height: 1.5;
-    font-size: 16px;
+    font-size: 0.75vw;
+    // font-size: 16px;
     font-family: "Poppins", sans-serif;
     overflow-x: hidden !important;
     background: var(--bg-black-900);
@@ -70,17 +71,16 @@ body.dark {
 ul {
     list-style: none;
 }
-
 .section {
     display: flex;
-    min-height: 100vh;
+    min-height: 6.25em;
     background: var(--bg-black-900);
     opacity: 1;
     position: relative;
     top: 0;
     .container {
         margin: auto;
-        padding-top: 45px;
+        padding-top: 2.8125em;
     }
 }
 
@@ -99,9 +99,8 @@ ul {
 
 .modal {
     position: absolute;
-    // min-height: calc(100vh - 0px);
-    height: 100%;
-    width: 100vh;
+    height: 100vh;
+    width: 100%;
     top: 0;
     left: 0;
     display: flex;
@@ -109,20 +108,19 @@ ul {
     align-items: center;
     z-index: 1;
     background-color: rgba-color($bg-black-900-light, 0.5);
-    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(3px);
-
     .content {
         position: relative;
-        top: 0px;
+        top: 0;
         overflow: hidden;
         margin-right: 1%;
         min-width: 300px;
         min-height: 100px;
-        border-radius: 7px;
-        width: 62.5%;
-        @include drop-shadow(0 0 16px rgba(0, 0, 0, 0.15));
+        border-radius: 0.4375em;
+        width: 62.5em;
+        @include drop-shadow(1em 1em 1em rgba(0, 0, 0, 0.15));
+        // margin: auto;
         button {
             position: absolute;
             top: 1.125em;
@@ -147,48 +145,47 @@ ul {
 .nav-toggler,
 #nav-toggler {
     position: fixed;
-    top: 22.5px;
-    right: 22.5px;
+    top: 1.40625em;
+    right: 1.40625em;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 45px;
-    height: 40px;
+    width: 2.8125em;
+    height: 2.5em;
     border: 1px solid var(--bg-black-50);
-    border-radius: 5px;
+    border-radius: 0.3125em;
     background: var(--bg-black-100);
     z-index: 1000;
-
     span {
         position: relative;
         display: inline-block;
-        width: 18px;
-        height: 2px;
+        width: 1.125em;
+        height: 0.125em;
         background: var(--skin-color);
 
         &::before {
             position: absolute;
-            top: -6px;
+            top: -0.375em;
             left: 0;
             content: "";
-            width: 18px;
-            height: 2px;
+            width: 1.125em;
+            height: 0.125em;
             background: var(--skin-color);
         }
 
         &::after {
             position: absolute;
-            top: 6px;
+            top: 0.375em;
             left: 0;
             content: "";
-            width: 18px;
-            height: 2px;
+            width: 1.125em;
+            height: 0.125em;
             background: var(--skin-color);
         }
     }
 }
 .col_End {
-    width: 100%;
-    height: 1px;
+    width: 6.25em;
+    height: 0.0625em;
 }
