--- a/src/assets/styles/01_base/_02_pages.scss
+++ b/src/assets/styles/01_base/_02_pages.scss
@@ -8,10 +8,6 @@
     min-height: 100vh;
     color: var(--text-black-900);
     position: relative;
-    // background-image: url(../../img/circuit-imprimé.svg);
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: contain;
     .container {
         flex: 0 0 87.47130206625124%;
         max-width: 87.47130206625124%;
@@ -20,6 +16,7 @@
         justify-content: space-between;
         min-height: 100vh;
         width: 100%;
+
         .row_top {
             align-self: flex-start;
             width: 100%;
@@ -39,17 +36,17 @@
                     &::before,
                     &::after {
                         content: "";
-                        width: 50px;
-                        height: 4px;
+                        width: 1.5625em;
+                        height: 0.08em;
                         background-color: $color-primary;
                         position: absolute;
                         top: 100%;
                         left: 0;
                     }
-
                     &::after {
-                        margin-top: 8px;
-                        width: 25px;
+                        margin-top: 0.27em;
+                        width: 0.78125em;
+                        height: 0.08em;
                     }
                 }
             }
@@ -59,7 +56,7 @@
             width: 100%;
         }
         .col_end {
-            height: 60px;
+            height: 3.75em;
         }
     }
 }
