--- a/src/components/99-Svg_Icon/languageIcon.scss
+++ b/src/components/99-Svg_Icon/languageIcon.scss
@@ -4,13 +4,16 @@
     @include row_R;
     align-items: center;
     justify-content: center;
-    font-size: 5em;
+
+    font-size: 1.15em;
     &:hover {
         fill: var(--skin-color);
     }
 }
 
 .color-icon {
+    // width: 20px;
+    // height: 20px;
     fill: var(--text-black-900);
     &:hover {
         fill: var(--skin-color);
