--- a/src/assets/styles/01_base/_05_tablette.scss
+++ b/src/assets/styles/01_base/_05_tablette.scss
@@ -128,116 +128,6 @@
             }
         }
     }
-    @media screen and (max-height: 1180px) {
-        .bgDraw2 {
-            bottom: 0px !important;
-            .tsparticles2,
-            #tsparticles2 {
-                width: 100% !important;
-                height: calc(50vh - 404px) !important;
-                bottom: 0px !important;
-                left: 0 !important;
-            }
-        }
-    }
-    @media screen and (min-height: 1180px) {
-        .home {
-            .row {
-                flex-flow: column nowrap;
-                border: 1px solid var(--bg-black-50);
-                top: 0;
-                padding: 0 0.5em 50px 0.5em;
-                min-height: 826.48px;
-                .home-info {
-                    position: static;
-                    .home-title {
-                        position: absolute;
-                        text-align: center;
-                        top: 0;
-                        width: 100%;
-                        span.name {
-                            display: block;
-                        }
-                    }
-                    .home-card {
-                        justify-content: flex-start;
-                        width: 100%;
-                        margin: 0;
-                        position: static;
-                        top: 0;
-                        &_group {
-                            width: 100%;
-                            text-align: center;
-                            margin: 0;
-                            .presentation_title {
-                                display: none;
-                            }
-                            .presentation_typing {
-                                font-size: 1.875em;
-                            }
-                        }
-                        .home-card-content {
-                            position: relative;
-                            top: -0.5em;
-                            display: flex;
-
-                            flex-flow: column;
-                            justify-content: center;
-                            font-size: 1.115em;
-                            margin: 0.75em 0.5em 0 0.5em;
-                            &_description {
-                                text-align: center;
-                                .home-quote {
-                                    text-align: center;
-                                    position: static;
-                                    margin: 0 auto 0.675em;
-                                    padding: 0;
-                                    display: inline-block;
-                                }
-                                .quote-description {
-                                    margin: 0 1em;
-                                }
-                            }
-                            .content-inner {
-                                align-self: center;
-                                margin: 0 0.65em 0;
-                                max-width: 391px;
-                                padding: 1em 0em;
-                            }
-                        }
-                    }
-                }
-                .blockImg {
-                    margin-top: 110px;
-                    height: 333px;
-                    .home-img {
-                        &::after {
-                            top: 90px;
-                            left: 0px;
-                            width: 100.13px;
-                            height: 160px;
-                        }
-                        &::before {
-                            bottom: -37px;
-                            right: -8px;
-                        }
-                        .centerNB {
-                            height: 360px;
-                        }
-                    }
-                }
-            }
-        }
-        .bgDraw2 {
-            .tsparticles2,
-            #tsparticles2 {
-                width: 100% !important;
-                height: calc(50vh - 470px) !important;
-                bottom: 0px !important;
-                left: 0 !important;
-            }
-        }
-    }
 }
 @media screen and (max-width: 992px) {
     .home {
@@ -676,7 +566,6 @@
             max-width: calc(100% - 60px);
             .col_end {
                 height: 0px;
-                border: 1px solid #000;
             }
         }
     }
@@ -702,7 +591,7 @@
         .about-content {
             .about-text {
                 p {
-                    max-width: calc(100% - 80px);
+                    max-width: calc(100% - 60px);
                     margin: auto;
                 }
                 h3 {
@@ -822,6 +711,11 @@
                 align-self: center;
                 max-width: calc(100% - 15px);
                 margin: auto;
+                .row-col {
+                    gap: 15px;
+                    flex-flow: row wrap;
+                    // margin: 15px 0;
+                }
             }
         }
         &-content {
@@ -829,6 +723,7 @@
             .row {
                 gap: 30px;
             }
+            margin: 0 0 15px 0;
         }
     }
     .contact-title {
@@ -878,6 +773,30 @@
                 }
             }
         }
-
+    }
+    .contact {
+        .row_center {
+            .row-col {
+                gap: 15px;
+                flex-flow: row wrap;
+                margin: 0 0 22.5px 0;
+            }
+        }
+        &-info-item {
+            min-width: calc(50% - 15px);
+            text-align: center;
+            margin-bottom: 0;
+            padding: 7.5px;
+            h4 {
+                font-size: 1em;
+            }
+        }
+        .contact-form .form-item,
+        .contact-form .col-12 .form-item {
+            margin-bottom: 22.5px;
+        }
+        .contact-content .row {
+            gap: 22.5px;
+        }
     }
 }
